# mindly-chairmans-council

./: .env  Dockerfile  QUICKSTART.md  README.md  SETUP_LINKS.md  h origin main  how --name-status 4c73c2a  pyproject.toml  tatus
.github/workflows/: deploy-cloud-run.yml
backend/: config.py  healthcare_prompts.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/backend/: firebase_service.py
frontend/backend/backend/: domain_config.py
frontend/backend/backend/backend/: Dockerfile  auth_middleware.py
frontend/backend/backend/backend/.github/workflows/: DEPLOYMENT_GUIDE.md  deploy-cloud-run.yml
frontend/src/: App.css  App.jsx
