[project]
name = "mindly-chairmans-council"
version = "1.0.0"
description = "Multi-model AI advisory council for Mindly Health"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "firebase-admin==6.4.0",
    "python-dotenv==1.0.0",
    "pydantic-settings==2.1.0",
]

[tool.uv]
compile = true
